--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,7 @@
     "homepage": "http://framework.zend.com/",
     "repositories": [
         {
-            "url": "ssh://git@git.mvlabs.it:4222/clients/sharengo-coremodule.git",
-            "type": "git"
-        },
-        {
-            "url": "ssh://git@git.mvlabs.it:4222/clients/sharengo-cartasi.git",
+            "url": "ssh://git@gitlab.bulweria.com/sharengo-web/admin-ui.git",
             "type": "git"
         },
         {
@@ -31,7 +27,8 @@
         "leafo/lessphp": "0.5.*",
         "mrclay/minify": "2.2.*",
         "natxet/CssMin": "3.0.*",
-        "mvlabs/zf2-multilanguage": "dev-master"
+        "mvlabs/zf2-multilanguage": "dev-master",
+        "sharengo-web/admin-ui": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
