--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,10 @@
         {
             "url": "https://git.mvlabs.it/internals/zf2-multilanguage.git",
             "type": "git"
+        },
+        {
+            "url": "ssh://git@gitlab.bulweria.com/cup-web/core-business.git",
+            "type": "git"
         }
     ],
     "require": {
@@ -28,10 +32,16 @@
         "mrclay/minify": "2.2.*",
         "natxet/CssMin": "3.0.*",
         "mvlabs/zf2-multilanguage": "dev-master",
-        "sharengo-web/admin-ui": "dev-master"
+        "sharengo-web/admin-ui": "dev-master",
+        "cup-web/core-business": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
         "phpmd/phpmd": "@stable"
+    },
+    "autoload-dev": {
+        "psr-0": {
+            "BusinessCore": "module/BusinessCore/src"
+        }
     }
 }
