--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "mvlabs/zf2-multilanguage": "dev-master",
         "sharengo-web/admin-ui": "dev-master",
         "cup-web/core-business": "dev-master",
-        "mvlabs/mvlabs-payments": "dev-master"
+        "mvlabs/mvlabs-payments": "dev-master",
+        "mvlabs/omnipay-cartasi": "@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
